# xpublish-intake

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: pypi.yml  tests.yml
reqs/: base.yml  dev.yml
tests/: test_plugin.py  utils.py
xpublish/plugins/axds/: intake.py
xpublish_intake/: plugins.py
