[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpublish-intake"
version = "0.0.1"
authors = [
  { name="Kyle Wilcox", email="kyle@axds.co" },
]
description = "An xpublish plugin for serving intake catalogs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "xpublish",
]

[project.urls]
"Homepage" = "https://github.com/axiom-data-science/xpublish-intake"
"Bug Tracker" = "https://github.com/axiom-data-science/xpublish-intake/issues"

[tool.setuptools.packages.find]
namespaces = true
exclude = [
    "tests",
    "tests.*"
]

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
