[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "setuptools-scm[toml]>=3.4",
  "wheel",
]

[project]
name = "xpublish-intake"
description = "An xpublish plugin for serving intake catalogs"
readme = "README.md"
authors = [
  { name = "Kyle Wilcox", email = "kyle@axds.co" },
]
requires-python = ">=3.9"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
  "version",
]
dependencies = [
  "xpublish",
]
urls."Bug Tracker" = "https://github.com/axiom-data-science/xpublish-intake/issues"
urls."Homepage" = "https://github.com/axiom-data-science/xpublish-intake"
entry-points."xpublish.plugin".intake = "xpublish_intake.plugins:IntakePlugin"

[tool.setuptools]
packages = [
  "xpublish_intake",
]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "xpublish_intake/_version.py"
write_to_template = "__version__ = '{version}'"
